[minor] add legend

--- a/trend.template.html
+++ b/trend.template.html
@@ -33,7 +33,7 @@ option={
         backgroundColor:"#fff",
         textStyle:{color:"#000"}
     },
-    legend:{data:[],show:!1},
+    legend:{show:true, bottom:"0%"},
     toolbox:{show:!1},
     calculable:!1,
     grid:{borderWidth:0},
