[feat] add 提醒处理率(别人回复了我 我接着回复别人)

--- a/trend.template.html
+++ b/trend.template.html
@@ -33,7 +33,7 @@ option={
         backgroundColor:"#fff",
         textStyle:{color:"#000"}
     },
-    legend:{show:true, bottom:"0%"},
+    legend:{show:true, type:"scroll", right:"10",orient: 'vertical', top:"30%"},
     toolbox:{show:!1},
     calculable:!1,
     grid:{borderWidth:0},
